# pyproject-template

./: .flake8  .pre-commit-config.yaml  .style.yapf  README.md  pyproject.toml
project/: main.py
tests/: test_poetry_demo.py
